[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Serpentes.png" type="Texture" id=1]
[ext_resource path="res://Scenes - Projectile/peluruSerpentes.gd" type="Script" id=2]
[ext_resource path="res://FX/bullet_dies (2).png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1344, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 448, 448 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 448, 448, 448 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 448, 448, 448 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 7.79076

[node name="peluruSerpentes" type="Area2D"]
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.250282, -3.83315 )
texture = ExtResource( 1 )
vframes = 4
hframes = 8
frame = 3

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
modulate = Color( 0.984314, 0.278431, 0, 1 )
position = Vector2( 0.463516, 0.529731 )
scale = Vector2( 0.081992, 0.0861305 )
frames = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_peluruSerpentes_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2" to="." method="_on_AnimatedSprite2_animation_finished"]
